tests/fixtures/invalid/string-bad-surrogate.stderr
TOML parse error at line 1, column 15
  |
1 | notgood = "a\uDCFF"
  |               ^
Invalid hex escape code: dcff 

While parsing a Basic String
